# codex-plus-web

./: .env.example  .gitignore  .gitmodules  AGENT.MD  AI-CODEX-WEB-README.MD  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  install.sh  plan.html
.github/workflows/: docker.yml
CodexPlusPlus/: Cargo.toml
CodexPlusPlus/apps/codex-plus-launcher/src/: main.rs
CodexPlusPlus/apps/codex-plus-manager/: package-lock.json  package.json
CodexPlusPlus/apps/codex-plus-manager/src-tauri/: tauri.conf.json
CodexPlusPlus/apps/codex-plus-manager/src-tauri/src/: commands.rs  lib.rs
CodexPlusPlus/crates/codex-plus-core/: Cargo.toml
CodexPlusPlus/crates/codex-plus-core/src/: ccs_import.rs  launcher.rs  lib.rs  plugin_marketplace.rs  protocol_proxy.rs  relay_config.rs  settings.rs
CodexPlusPlus/crates/codex-plus-core/src/install/: mod.rs  windows.rs
CodexPlusPlus/crates/codex-plus-core/tests/: cdp_bridge.rs  installers.rs  launcher.rs  protocol_proxy.rs  relay_config.rs  relay_switch.rs
nginx/: default.conf
web-api/: Cargo.toml  Dockerfile
web-api/src/: cli.rs  main.rs  state.rs  ws.rs
web-api/src/routes/: codex_detect.rs  enhancements.rs  health.rs  mod.rs  presets.rs  proxy.rs  relay.rs  sessions.rs  settings.rs  status.rs  tests.rs
web-ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.test.tsx  App.tsx  main.tsx  styles.css
web-ui/src/api/: client.ts
